# toml.bzl

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  toml.bzl
.github/workflows/: build.yaml  ci.yaml  publish.yaml  release.yaml
bazel/: workspace_status.sh
bazel/include/: rust.MODULE.bazel
bazel/rust/: defs.bzl
toml/private/: BUILD.bazel  toml.bzl
toml/private/tomltool/: BUILD.bazel  Cargo.toml
toml/private/tomltool/src/: main.rs
tools/tomltool/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  bazel-tomltool
tools/tomltool/bazel/include/: llvm.MODULE.bazel  musl.MODULE.bazel  rust.MODULE.bazel
tools/tomltool/bazel/release/: hashes.bzl
tools/tomltool/bazel/rust/: defs.bzl  multi_platform_rust_binaries.bzl
tools/tomltool/src/: main.rs
