"""
aspect-build/toml.bzl/tools/tomltool
"""

module(
    name = "tomltool",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "with_cfg.bzl", version = "0.11.0")

include("//bazel/include:llvm.MODULE.bazel")
include("//bazel/include:musl.MODULE.bazel")
include("//bazel/include:rust.MODULE.bazel")

register_toolchains("//bazel/platforms/toolchains/...")
