[package]
name = "tomltool"
version.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "tomltool"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.48"
serde_json = "1.0.145"
toml = "0.9.7"
